--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5766,4 +5766,17 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+footer {
+  padding: 0;
+  margin: 0;
+  color: #FFF; }
+  footer .footer-top {
+    min-height: 300px;
+    background: #462455;
+    padding: 5em; }
+  footer .footer-bottom {
+    padding: 5em;
+    text-align: center;
+    background: #000; }
+
 /*# sourceMappingURL=app.css.map */
