--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,21 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+footer {
+	padding: 0;
+	margin: 0;
+	color: #FFF;
+
+	.footer-top {
+		min-height: 300px;
+		background: #462455;
+		padding: 5em;
+	}
+
+	.footer-bottom {
+		padding: 5em;
+		text-align: center;
+		background: #000;
+	}
+}
