--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,18 @@
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+.summary {
+	padding : {
+		top: 5em;
+		bottom: 5em;
+	}
+	.row {
+		li {
+			font-size: 18px;
+		}
+	}
+}
+
 footer {
 	padding: 0;
 	margin: 0;
